[project]
name = "qlient"
dynamic = ["version"]
description = "Add your description here"
authors = [
    { name = "dfseifert", email = "github.0gy60@passmail.net" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.7",
    "httpx>=0.27.2",
]

[tool.rye]
universal = true
managed = true
virtual = true
dev-dependencies = [
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "pytest-pretty>=1.2.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
    "pytest-aiohttp>=1.0.5",
    "strawberry-graphql>=0.253.0",
    "Faker",
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.25.2",
    "mkdocs-material>=9.5.33",
    "mkdocs-awesome-pages-plugin==2.9.3",
    "mkdocs-git-authors-plugin>=0.9.2",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "hatchling>=1.25.0",
    "hatch-vcs>=0.4.0",
    "commitizen>=3.30.1",
    "docformatter[tomli]>=1.7.5",
    "black>=24.10.0",
    "git-cliff>=2.7.0",
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
]


[tool.rye.behavior]
use-uv = true

[tool.rye.workspace]
members = ["packages/qlient-*"]

[tool.uv.workspace]
members = ["packages/qlient-*"]

[tool.hatch.version]
source = "vcs"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
